argocd-rollout-app/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-argocd
      protocol: HTTP
    hosts:
    - "app.virtualti.net"
  - port:
      number: 443
      name: https-argocd
      protocol: HTTP
    hosts:
    - "app.virtualti.net"
