argocd-rollout-app/istio/virtualservice.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: app-vs
#   namespace: app
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - istio-system/my-gateway
#   http:
#   - name: primary-route
#     route:
#     - destination:
#         host: app-stable
#       weight: 100
#     - destination:
#         host: app-canary
#       weight: 0

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
  namespace: app
spec:
  hosts:
  - "argocd.virtualti.net"
  gateways:
  - istio-system/my-gateway
  http:
  - name: primary-route
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app-stable
      weight: 100
    - destination:
        host: app-canary
      weight: 0
